Readjust left margin of page header so the avatar is correctly aligned.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,7 +17,7 @@
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
-    margin-left: -80px;
+    margin-left: -160px;
     vertical-align: top;
     float: left;
 
